# SlicerCleverSegmentation

./: CMakeLists.txt  README.md
CleverSeg/: CMakeLists.txt  vtkCleverSeg.cxx  vtkCleverSeg.h  vtkImageCleverSegSegment.cxx  vtkImageCleverSegSegment.h
CleverSegmentation/: CMakeLists.txt  SegmentEditorCleverSegmentation.py
CleverSegmentation/SegmentEditorCleverSegmentationLib/: SegmentEditorEffect.py
